# BLE-LoRA-Adapter

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/protobuf/: CMakeLists.txt  gen.sh
components/protobuf/helper/: whitelist.cpp  whitelist.h
components/protobuf/proto/: ble.options  ble.proto
main/: CMakeLists.txt
main/include/: app_nvs.h  common.h  esp_hal.h  heart_monitor.h  scan_callback.h  scan_manager.h  server_callback.h  utils.h  whitelist_char_callback.h  wlan_manager.h
main/protocol/docs/: README.md  common.ksy  gen.py  hr_data.ksy  named_hr_data.ksy  query_device_by_mac.ksy  query_device_by_mac_r.ksy  repeater_status.ksy  set_name_map_key.ksy  types.ksy
main/protocol/inc/: hr_data.tpp  hr_lora.h  hr_lora_common.tpp  named_hr_data.tpp  query_device_by_mac.tpp  repeater_status.tpp  set_name_map_key.tpp
main/src/: app_main.cpp  app_nvs.cpp  esp_hal.cpp  server_callback.cpp  utils.cpp  wlan_manager.cpp
